# 100-days-of-gpu

./: .gitignore  CMakeLists.txt  README.md  build.sh
day01/: CMakeLists.txt  main.cu  vecAdd.cu
day02/: CMakeLists.txt  matAdd.cu
day03/: CMakeLists.txt  matVecMul.cu
day04/: CMakeLists.txt  vectorSum.cu
